example/route-k8sservice.yaml
apiVersion: edgeserverless.kubeedge.io/v1alpha1
kind: Route
metadata:
  name: edgeserverless-route
  namespace: edgeserverless-demo
spec:
  id: eeb2dd1c-2fe2-11ec-8d3d-0242ac130003
  name: route-name
  uri: bianshengwei.com/myjsfunc
  targets:
    - target: http://edgeserverless-svc-hostname-1.edgeserverless-demo.svc.cluster.local:12345
      type: k8sservice
      ratio: 90
    - target: http://edgeserverless-svc-hostname-2.edgeserverless-demo.svc.cluster.local:12345
      type: k8sservice
      ratio: 10
